--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,35 @@
+# FOR JAVA
 *.class
+
+# Package Files #
 *.jar
+*.war
+*.ear
+
+#FOR Eclipse
+*.pydevproject
+.metadata
+.gradle
 bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
+
+# sbteclipse plugin 
+.target
+target
+
+# TeXlipse plugin
+.texlipse
 
