ignore .classpath and .project

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,18 @@
 # FOR JAVA
-<<<<<<< HEAD
-*.class
-
-=======
-
 *.class
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
->>>>>>> b1c513129d1905dfcd18811d4b07e44bf3c2128b
+
 # Package Files #
 *.jar
 *.war
 *.ear
 
-<<<<<<< HEAD
 #FOR Eclipse
-=======
-
-#FOR Eclipse
-
->>>>>>> b1c513129d1905dfcd18811d4b07e44bf3c2128b
+.classpath
+.project
 *.pydevproject
 .metadata
 .gradle
