--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-
 # Package Files #
 *.jar
 *.war
@@ -26,15 +25,12 @@ local.properties
 .settings/
 .loadpath
 
-<<<<<<< HEAD
-=======
 # External tool builders
 .externalToolBuilders/
 
 # Locally stored "Eclipse launch configurations"
 *.launch
 
->>>>>>> b1c513129d1905dfcd18811d4b07e44bf3c2128b
 # CDT-specific
 .cproject
 
@@ -46,13 +42,10 @@ local.properties
 target
 
 # TeXlipse plugin
-<<<<<<< HEAD
 .texlipse
-
-=======
-.texlipse
->>>>>>> b1c513129d1905dfcd18811d4b07e44bf3c2128b
 
 *.log
 build
 .build
+.save
+*~
