--- a/build.xml
+++ b/build.xml
@@ -14,6 +14,7 @@
 	<path id="aquarium.classpath">
 		<pathelement location="build"/>
 		<pathelement location="lib/log4j-1.2.17.jar"/>
+		<pathelement location="lib/junit-4.1.jar"/>
     </path>
 
 	<target name="init">
