insignificant change of properties

--- a/src/com/epam/koryagin/aquarium/resources/messageEnUS.properties
+++ b/src/com/epam/koryagin/aquarium/resources/messageEnUS.properties
@@ -1,3 +1,4 @@
-message.chooseTank = "Choose Tank:"
-message.tankCreated = "Sample tank created"
-message.wrongChoice = "Wrong Choice - no such item"
+message.chooseTank = Choose Tank:
+message.tankCreated = Sample tank created
+message.wrongChoice = Wrong Choice - no such item
+message.exit = EXIT
