developing fish properties

--- a/src/com/epam/koryagin/aquarium/resources/fish.properties
+++ b/src/com/epam/koryagin/aquarium/resources/fish.properties
@@ -1,3 +1,7 @@
 fish.minPrice = 15.5
 fish.maxPrice = 25.3
-
+fish.Cardinalfish.code = 5
+fish.Cardinalfish.name = Cardinalfish
+fish.Cardinalfish.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.Cardinalfish.sizeMax = 120
+fish.Cardinalfish.tankVolumeMin = 10
