--- a/src/com/epam/koryagin/aquarium/resources/messageEnUS.properties
+++ b/src/com/epam/koryagin/aquarium/resources/messageEnUS.properties
@@ -1,4 +1,8 @@
 message.chooseTank = Choose Tank:
 message.tankCreated = Sample tank created
-message.wrongChoice = Wrong Choice - no such item
-message.exit = EXIT
+message.menu.wrongChoice = Wrong Choice - no such item
+message.menu.exit = EXIT
+message.menu.selectFish = SELECT FISH
+message.menu.selectReptile = SELECT REPTILE
+message.menu.selectAccessory = SELECT ACCESSORY
+message.menu.generateReport = GENERATE REPORT
