almost ready property idea

--- a/src/com/epam/koryagin/aquarium/resources/fish.properties
+++ b/src/com/epam/koryagin/aquarium/resources/fish.properties
@@ -1,7 +1,12 @@
 fish.minPrice = 15.5
 fish.maxPrice = 25.3
-fish.Cardinalfish.code = 5
-fish.Cardinalfish.name = Cardinalfish
+
+fish.Cardinalfish.uid = 5
+fish.Cardinalfish.name =  Banggai cardinalfish
+fish.Cardinalfish.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.Cardinalfish.price = 12.3
+fish.Cardinalfish.priceMax = 15.0
+fish.Cardinalfish.priceMin = 10.0
 fish.Cardinalfish.taxonomy = "Class: Actinopterygii, Order Perciformes"
 fish.Cardinalfish.sizeMax = 120
 fish.Cardinalfish.tankVolumeMin = 10
