fish DAO and properties are ready

--- a/src/com/epam/koryagin/aquarium/resources/fish.properties
+++ b/src/com/epam/koryagin/aquarium/resources/fish.properties
@@ -1,5 +1,42 @@
-fish.minPrice = 15.5
-fish.maxPrice = 25.3
+fish.Angelfish.uid = 1
+fish.Angelfish.name =  Angelfish
+fish.Angelfish.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.Angelfish.price = 12.3
+fish.Angelfish.priceMax = 15.0
+fish.Angelfish.priceMin = 10.0
+fish.Angelfish.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.Angelfish.sizeMax = 120
+fish.Angelfish.tankVolumeMin = 10
+
+fish.Basslet.uid = 2
+fish.Basslet.name =  Basslet
+fish.Basslet.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.Basslet.price = 12.3
+fish.Basslet.priceMax = 15.0
+fish.Basslet.priceMin = 10.0
+fish.Basslet.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.Basslet.sizeMax = 120
+fish.Basslet.tankVolumeMin = 10
+
+fish.Boxfish.uid = 3
+fish.Boxfish.name =  Boxfish
+fish.Boxfish.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.Boxfish.price = 12.3
+fish.Boxfish.priceMax = 15.0
+fish.Boxfish.priceMin = 10.0
+fish.Boxfish.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.Boxfish.sizeMax = 120
+fish.Boxfish.tankVolumeMin = 10
+
+fish.TigerBarb.uid = 4
+fish.TigerBarb.name =  TigerBarb
+fish.TigerBarb.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.TigerBarb.price = 12.3
+fish.TigerBarb.priceMax = 15.0
+fish.TigerBarb.priceMin = 10.0
+fish.TigerBarb.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.TigerBarb.sizeMax = 120
+fish.TigerBarb.tankVolumeMin = 10
 
 fish.Cardinalfish.uid = 5
 fish.Cardinalfish.name =  Banggai cardinalfish
@@ -10,3 +47,89 @@ fish.Cardinalfish.priceMin = 10.0
 fish.Cardinalfish.taxonomy = "Class: Actinopterygii, Order Perciformes"
 fish.Cardinalfish.sizeMax = 120
 fish.Cardinalfish.tankVolumeMin = 10
+
+fish.Clownfish.uid = 6
+fish.Clownfish.name =  Clownfish
+fish.Clownfish.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.Clownfish.price = 12.3
+fish.Clownfish.priceMax = 15.0
+fish.Clownfish.priceMin = 10.0
+fish.Clownfish.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.Clownfish.sizeMax = 120
+fish.Clownfish.tankVolumeMin = 10
+
+Foxface
+fish.Foxface.uid = 7
+fish.Foxface.name =  Foxface
+fish.Foxface.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.Foxface.price = 12.3
+fish.Foxface.priceMax = 15.0
+fish.Foxface.priceMin = 10.0
+fish.Foxface.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.Foxface.sizeMax = 120
+fish.Foxface.tankVolumeMin = 10
+
+Goby
+fish.Goby.uid = 8
+fish.Goby.name =  Goby
+fish.Goby.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.Goby.price = 12.3
+fish.Goby.priceMax = 15.0
+fish.Goby.priceMin = 10.0
+fish.Goby.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.Goby.sizeMax = 120
+fish.Goby.tankVolumeMin = 10
+
+
+Hogfish
+fish.Hogfish.uid = 9
+fish.Hogfish.name =  Hogfish
+fish.Hogfish.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.Hogfish.price = 12.3
+fish.Hogfish.priceMax = 15.0
+fish.Hogfish.priceMin = 10.0
+fish.Hogfish.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.Hogfish.sizeMax = 120
+fish.Hogfish.tankVolumeMin = 10
+
+Seahorse
+fish.Seahorse.uid = 10
+fish.Seahorse.name =  Seahorse
+fish.Seahorse.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.Seahorse.price = 12.3
+fish.Seahorse.priceMax = 15.0
+fish.Seahorse.priceMin = 10.0
+fish.Seahorse.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.Seahorse.sizeMax = 120
+
+fish.Shark.uid = 11
+fish.Shark.name =  Shark
+fish.Shark.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.Shark.price = 12000.0
+fish.Shark.priceMax = 20000.0
+fish.Shark.priceMin = 10000.0
+fish.Shark.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.Shark.sizeMax = 12000
+fish.Shark.tankVolumeMin = 50000
+
+fish.Triggerfish.uid = 12
+fish.Triggerfish.name =  Triggerfish
+fish.Triggerfish.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.Triggerfish.price = 12.0
+fish.Triggerfish.priceMax = 20.0
+fish.Triggerfish.priceMin = 10.0
+fish.Triggerfish.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.Triggerfish.sizeMax = 120
+fish.Triggerfish.tankVolumeMin = 50
+
+Wrasse
+fish.Wrasse.uid = 13
+fish.Wrasse.name = Wrasse
+fish.Wrasse.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.Wrasse.price = 12.0
+fish.Wrasse.priceMax = 20.0
+fish.Wrasse.priceMin = 10.0
+fish.Wrasse.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.Wrasse.sizeMax = 120
+fish.Wrasse.tankVolumeMin = 50
+
