reptile properties are ready

--- a/src/com/epam/koryagin/aquarium/resources/fish.properties
+++ b/src/com/epam/koryagin/aquarium/resources/fish.properties
@@ -1,135 +1,129 @@
 fish.Angelfish.uid = 1
 fish.Angelfish.name =  Angelfish
-fish.Angelfish.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
-fish.Angelfish.price = 12.3
+fish.Angelfish.description = Not available.
+fish.Angelfish.price = 13.9
 fish.Angelfish.priceMax = 15.0
-fish.Angelfish.priceMin = 10.0
-fish.Angelfish.taxonomy = "Class: Actinopterygii, Order Perciformes"
-fish.Angelfish.sizeMax = 120
+fish.Angelfish.priceMin = 12.0
+fish.Angelfish.taxonomy = Class Actinopterygii, Order Perciformes
+fish.Angelfish.sizeMax = 60
 fish.Angelfish.tankVolumeMin = 10
 
 fish.Basslet.uid = 2
 fish.Basslet.name =  Basslet
-fish.Basslet.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
-fish.Basslet.price = 12.3
+fish.Basslet.description = Not available.
+fish.Basslet.price = 12.9
 fish.Basslet.priceMax = 15.0
-fish.Basslet.priceMin = 10.0
-fish.Basslet.taxonomy = "Class: Actinopterygii, Order Perciformes"
-fish.Basslet.sizeMax = 120
-fish.Basslet.tankVolumeMin = 10
+fish.Basslet.priceMin = 13.0
+fish.Basslet.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.Basslet.sizeMax = 40
+fish.Basslet.tankVolumeMin = 8
 
 fish.Boxfish.uid = 3
 fish.Boxfish.name =  Boxfish
-fish.Boxfish.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
-fish.Boxfish.price = 12.3
-fish.Boxfish.priceMax = 15.0
-fish.Boxfish.priceMin = 10.0
-fish.Boxfish.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.Boxfish.description = Not available.
+fish.Boxfish.price = 19.9
+fish.Boxfish.priceMax = 25.0
+fish.Boxfish.priceMin = 5.0
+fish.Boxfish.taxonomy = Class: Actinopterygii, Order Tetraodontiformes
 fish.Boxfish.sizeMax = 120
 fish.Boxfish.tankVolumeMin = 10
 
 fish.TigerBarb.uid = 4
 fish.TigerBarb.name =  TigerBarb
-fish.TigerBarb.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.TigerBarb.description = Not available.
 fish.TigerBarb.price = 12.3
 fish.TigerBarb.priceMax = 15.0
 fish.TigerBarb.priceMin = 10.0
-fish.TigerBarb.taxonomy = "Class: Actinopterygii, Order Perciformes"
-fish.TigerBarb.sizeMax = 120
-fish.TigerBarb.tankVolumeMin = 10
+fish.TigerBarb.taxonomy = Class: Actinopterygii, Order Cypriniformes
+fish.TigerBarb.sizeMax = 250
+fish.TigerBarb.tankVolumeMin = 50
 
 fish.Cardinalfish.uid = 5
 fish.Cardinalfish.name =  Banggai cardinalfish
 fish.Cardinalfish.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
-fish.Cardinalfish.price = 12.3
-fish.Cardinalfish.priceMax = 15.0
-fish.Cardinalfish.priceMin = 10.0
-fish.Cardinalfish.taxonomy = "Class: Actinopterygii, Order Perciformes"
-fish.Cardinalfish.sizeMax = 120
-fish.Cardinalfish.tankVolumeMin = 10
+fish.Cardinalfish.price = 15.9
+fish.Cardinalfish.priceMax = 17.0
+fish.Cardinalfish.priceMin = 12.0
+fish.Cardinalfish.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.Cardinalfish.sizeMax = 180
+fish.Cardinalfish.tankVolumeMin = 30
 
 fish.Clownfish.uid = 6
 fish.Clownfish.name =  Clownfish
-fish.Clownfish.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
-fish.Clownfish.price = 12.3
-fish.Clownfish.priceMax = 15.0
-fish.Clownfish.priceMin = 10.0
-fish.Clownfish.taxonomy = "Class: Actinopterygii, Order Perciformes"
-fish.Clownfish.sizeMax = 120
-fish.Clownfish.tankVolumeMin = 10
+fish.Clownfish.description = Not available.
+fish.Clownfish.price = 2.9
+fish.Clownfish.priceMax = 4.0
+fish.Clownfish.priceMin = 2.0
+fish.Clownfish.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.Clownfish.sizeMax = 280
+fish.Clownfish.tankVolumeMin = 60
 
-Foxface
 fish.Foxface.uid = 7
 fish.Foxface.name =  Foxface
-fish.Foxface.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
-fish.Foxface.price = 12.3
-fish.Foxface.priceMax = 15.0
-fish.Foxface.priceMin = 10.0
-fish.Foxface.taxonomy = "Class: Actinopterygii, Order Perciformes"
-fish.Foxface.sizeMax = 120
-fish.Foxface.tankVolumeMin = 10
+fish.Foxface.description = Not available.
+fish.Foxface.price = 20.9
+fish.Foxface.priceMax = 22.0
+fish.Foxface.priceMin = 20.0
+fish.Foxface.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.Foxface.sizeMax = 150
+fish.Foxface.tankVolumeMin = 100
 
-Goby
 fish.Goby.uid = 8
 fish.Goby.name =  Goby
-fish.Goby.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
-fish.Goby.price = 12.3
-fish.Goby.priceMax = 15.0
-fish.Goby.priceMin = 10.0
-fish.Goby.taxonomy = "Class: Actinopterygii, Order Perciformes"
-fish.Goby.sizeMax = 120
-fish.Goby.tankVolumeMin = 10
+fish.Goby.description = Not available.
+fish.Goby.price = 7.5
+fish.Goby.priceMax = 8.0
+fish.Goby.priceMin = 7.0
+fish.Goby.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.Goby.sizeMax = 220
+fish.Goby.tankVolumeMin = 40
 
-
-Hogfish
 fish.Hogfish.uid = 9
 fish.Hogfish.name =  Hogfish
-fish.Hogfish.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
-fish.Hogfish.price = 12.3
-fish.Hogfish.priceMax = 15.0
-fish.Hogfish.priceMin = 10.0
-fish.Hogfish.taxonomy = "Class: Actinopterygii, Order Perciformes"
-fish.Hogfish.sizeMax = 120
-fish.Hogfish.tankVolumeMin = 10
+fish.Hogfish.description = Not available.
+fish.Hogfish.price = 29.9
+fish.Hogfish.priceMax = 32.0
+fish.Hogfish.priceMin = 28.0
+fish.Hogfish.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.Hogfish.sizeMax = 310
+fish.Hogfish.tankVolumeMin = 100
 
-Seahorse
 fish.Seahorse.uid = 10
 fish.Seahorse.name =  Seahorse
-fish.Seahorse.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.Seahorse.description = Not available.
 fish.Seahorse.price = 12.3
-fish.Seahorse.priceMax = 15.0
-fish.Seahorse.priceMin = 10.0
-fish.Seahorse.taxonomy = "Class: Actinopterygii, Order Perciformes"
-fish.Seahorse.sizeMax = 120
+fish.Seahorse.priceMax = 10.0
+fish.Seahorse.priceMin = 8.0
+fish.Seahorse.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.Seahorse.sizeMax = 70
+fish.Seahorse.tankVolumeMin = 30
 
 fish.Shark.uid = 11
 fish.Shark.name =  Shark
-fish.Shark.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.Shark.description = Not available.
 fish.Shark.price = 12000.0
-fish.Shark.priceMax = 20000.0
-fish.Shark.priceMin = 10000.0
-fish.Shark.taxonomy = "Class: Actinopterygii, Order Perciformes"
+fish.Shark.priceMax = 4500.0
+fish.Shark.priceMin = 1200.0
+fish.Shark.taxonomy = Class: Chondrichthyes, Order Carcharhiniformes
 fish.Shark.sizeMax = 12000
 fish.Shark.tankVolumeMin = 50000
 
 fish.Triggerfish.uid = 12
 fish.Triggerfish.name =  Triggerfish
-fish.Triggerfish.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
-fish.Triggerfish.price = 12.0
-fish.Triggerfish.priceMax = 20.0
-fish.Triggerfish.priceMin = 10.0
-fish.Triggerfish.taxonomy = "Class: Actinopterygii, Order Perciformes"
-fish.Triggerfish.sizeMax = 120
-fish.Triggerfish.tankVolumeMin = 50
+fish.Triggerfish.description = Not available.
+fish.Triggerfish.price = 15.9
+fish.Triggerfish.priceMax = 26.0
+fish.Triggerfish.priceMin = 13.0
+fish.Triggerfish.taxonomy = Class: Actinopterygii, Order Tetraodontiformes
+fish.Triggerfish.sizeMax = 350
+fish.Triggerfish.tankVolumeMin = 70
 
-Wrasse
 fish.Wrasse.uid = 13
 fish.Wrasse.name = Wrasse
-fish.Wrasse.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
-fish.Wrasse.price = 12.0
-fish.Wrasse.priceMax = 20.0
-fish.Wrasse.priceMin = 10.0
-fish.Wrasse.taxonomy = "Class: Actinopterygii, Order Perciformes"
-fish.Wrasse.sizeMax = 120
-fish.Wrasse.tankVolumeMin = 50
-
+fish.Wrasse.description = Not available.
+fish.Wrasse.price = 34.9
+fish.Wrasse.priceMax = 36.0
+fish.Wrasse.priceMin = 33.0
+fish.Wrasse.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.Wrasse.sizeMax = 80
+fish.Wrasse.tankVolumeMin = 60
