overloaded factory method

--- a/src/com/epam/koryagin/aquarium/resources/fish.properties
+++ b/src/com/epam/koryagin/aquarium/resources/fish.properties
@@ -1,129 +1,146 @@
-fish.Angelfish.uid = 1
-fish.Angelfish.name =  Angelfish
-fish.Angelfish.description = Not available.
-fish.Angelfish.price = 13.9
-fish.Angelfish.priceMax = 15.0
-fish.Angelfish.priceMin = 12.0
-fish.Angelfish.taxonomy = Class Actinopterygii, Order Perciformes
-fish.Angelfish.sizeMax = 60
-fish.Angelfish.tankVolumeMin = 10
+fish.type.angelfish = 1
+fish.type.basslet = 2
+fish.type.boxfish = 3
+fish.type.tigerBarb = 4
+fish.type.cardinalfish = 5
+fish.type.clownfish = 6
+fish.type.foxface = 7
+fish.type.goby = 8
+fish.type.hogfish = 9
+fish.type.seahorse = 10
+fish.type.shark = 11
+fish.type.triggerfish = 12
+fish.type.wrasse = 13
 
-fish.Basslet.uid = 2
-fish.Basslet.name =  Basslet
-fish.Basslet.description = Not available.
-fish.Basslet.price = 12.9
-fish.Basslet.priceMax = 15.0
-fish.Basslet.priceMin = 13.0
-fish.Basslet.taxonomy = Class: Actinopterygii, Order Perciformes
-fish.Basslet.sizeMax = 40
-fish.Basslet.tankVolumeMin = 8
 
-fish.Boxfish.uid = 3
-fish.Boxfish.name =  Boxfish
-fish.Boxfish.description = Not available.
-fish.Boxfish.price = 19.9
-fish.Boxfish.priceMax = 25.0
-fish.Boxfish.priceMin = 5.0
-fish.Boxfish.taxonomy = Class: Actinopterygii, Order Tetraodontiformes
-fish.Boxfish.sizeMax = 120
-fish.Boxfish.tankVolumeMin = 10
 
-fish.TigerBarb.uid = 4
-fish.TigerBarb.name =  TigerBarb
-fish.TigerBarb.description = Not available.
-fish.TigerBarb.price = 12.3
-fish.TigerBarb.priceMax = 15.0
-fish.TigerBarb.priceMin = 10.0
-fish.TigerBarb.taxonomy = Class: Actinopterygii, Order Cypriniformes
-fish.TigerBarb.sizeMax = 250
-fish.TigerBarb.tankVolumeMin = 50
 
-fish.Cardinalfish.uid = 5
-fish.Cardinalfish.name =  Banggai cardinalfish
-fish.Cardinalfish.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
-fish.Cardinalfish.price = 15.9
-fish.Cardinalfish.priceMax = 17.0
-fish.Cardinalfish.priceMin = 12.0
-fish.Cardinalfish.taxonomy = Class: Actinopterygii, Order Perciformes
-fish.Cardinalfish.sizeMax = 180
-fish.Cardinalfish.tankVolumeMin = 30
+fish.angelfish.uid = 1
+fish.angelfish.name =  Angelfish
+fish.angelfish.description = Not available.
+fish.angelfish.price = 13.9
+fish.angelfish.priceMax = 15.0
+fish.angelfish.priceMin = 12.0
+fish.angelfish.taxonomy = Class Actinopterygii, Order Perciformes
+fish.angelfish.sizeMax = 60
+fish.angelfish.tankVolumeMin = 10
 
-fish.Clownfish.uid = 6
-fish.Clownfish.name =  Clownfish
-fish.Clownfish.description = Not available.
-fish.Clownfish.price = 2.9
-fish.Clownfish.priceMax = 4.0
-fish.Clownfish.priceMin = 2.0
-fish.Clownfish.taxonomy = Class: Actinopterygii, Order Perciformes
-fish.Clownfish.sizeMax = 280
-fish.Clownfish.tankVolumeMin = 60
+fish.basslet.uid = 2
+fish.basslet.name =  Basslet
+fish.basslet.description = Not available.
+fish.basslet.price = 12.9
+fish.basslet.priceMax = 15.0
+fish.basslet.priceMin = 13.0
+fish.basslet.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.basslet.sizeMax = 40
+fish.basslet.tankVolumeMin = 8
 
-fish.Foxface.uid = 7
-fish.Foxface.name =  Foxface
-fish.Foxface.description = Not available.
-fish.Foxface.price = 20.9
-fish.Foxface.priceMax = 22.0
-fish.Foxface.priceMin = 20.0
-fish.Foxface.taxonomy = Class: Actinopterygii, Order Perciformes
-fish.Foxface.sizeMax = 150
-fish.Foxface.tankVolumeMin = 100
+fish.boxfish.uid = 3
+fish.boxfish.name =  Boxfish
+fish.boxfish.description = Not available.
+fish.boxfish.price = 19.9
+fish.boxfish.priceMax = 25.0
+fish.boxfish.priceMin = 5.0
+fish.boxfish.taxonomy = Class: Actinopterygii, Order Tetraodontiformes
+fish.boxfish.sizeMax = 120
+fish.boxfish.tankVolumeMin = 10
 
-fish.Goby.uid = 8
-fish.Goby.name =  Goby
-fish.Goby.description = Not available.
-fish.Goby.price = 7.5
-fish.Goby.priceMax = 8.0
-fish.Goby.priceMin = 7.0
-fish.Goby.taxonomy = Class: Actinopterygii, Order Perciformes
-fish.Goby.sizeMax = 220
-fish.Goby.tankVolumeMin = 40
+fish.tigerBarb.uid = 4
+fish.tigerBarb.name =  TigerBarb
+fish.tigerBarb.description = Not available.
+fish.tigerBarb.price = 12.3
+fish.tigerBarb.priceMax = 15.0
+fish.tigerBarb.priceMin = 10.0
+fish.tigerBarb.taxonomy = Class: Actinopterygii, Order Cypriniformes
+fish.tigerBarb.sizeMax = 250
+fish.tigerBarb.tankVolumeMin = 50
 
-fish.Hogfish.uid = 9
-fish.Hogfish.name =  Hogfish
-fish.Hogfish.description = Not available.
-fish.Hogfish.price = 29.9
-fish.Hogfish.priceMax = 32.0
-fish.Hogfish.priceMin = 28.0
-fish.Hogfish.taxonomy = Class: Actinopterygii, Order Perciformes
-fish.Hogfish.sizeMax = 310
-fish.Hogfish.tankVolumeMin = 100
+fish.cardinalfish.uid = 5
+fish.cardinalfish.name =  Banggai cardinalfish
+fish.cardinalfish.description = Color Form: Black, Orange, White, Yellow; Diet: Omnivore; Origin: Farm Raised, USA
+fish.cardinalfish.price = 15.9
+fish.cardinalfish.priceMax = 17.0
+fish.cardinalfish.priceMin = 12.0
+fish.cardinalfish.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.cardinalfish.sizeMax = 180
+fish.cardinalfish.tankVolumeMin = 30
 
-fish.Seahorse.uid = 10
-fish.Seahorse.name =  Seahorse
-fish.Seahorse.description = Not available.
-fish.Seahorse.price = 12.3
-fish.Seahorse.priceMax = 10.0
-fish.Seahorse.priceMin = 8.0
-fish.Seahorse.taxonomy = Class: Actinopterygii, Order Perciformes
-fish.Seahorse.sizeMax = 70
-fish.Seahorse.tankVolumeMin = 30
+fish.clownfish.uid = 6
+fish.clownfish.name =  Clownfish
+fish.clownfish.description = Not available.
+fish.clownfish.price = 2.9
+fish.clownfish.priceMax = 4.0
+fish.clownfish.priceMin = 2.0
+fish.clownfish.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.clownfish.sizeMax = 280
+fish.clownfish.tankVolumeMin = 60
 
-fish.Shark.uid = 11
-fish.Shark.name =  Shark
-fish.Shark.description = Not available.
-fish.Shark.price = 12000.0
-fish.Shark.priceMax = 4500.0
-fish.Shark.priceMin = 1200.0
-fish.Shark.taxonomy = Class: Chondrichthyes, Order Carcharhiniformes
-fish.Shark.sizeMax = 12000
-fish.Shark.tankVolumeMin = 50000
+fish.foxface.uid = 7
+fish.foxface.name =  Foxface
+fish.foxface.description = Not available.
+fish.foxface.price = 20.9
+fish.foxface.priceMax = 22.0
+fish.foxface.priceMin = 20.0
+fish.foxface.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.foxface.sizeMax = 150
+fish.foxface.tankVolumeMin = 100
 
-fish.Triggerfish.uid = 12
-fish.Triggerfish.name =  Triggerfish
-fish.Triggerfish.description = Not available.
-fish.Triggerfish.price = 15.9
-fish.Triggerfish.priceMax = 26.0
-fish.Triggerfish.priceMin = 13.0
-fish.Triggerfish.taxonomy = Class: Actinopterygii, Order Tetraodontiformes
-fish.Triggerfish.sizeMax = 350
-fish.Triggerfish.tankVolumeMin = 70
+fish.goby.uid = 8
+fish.goby.name =  Goby
+fish.goby.description = Not available.
+fish.goby.price = 7.5
+fish.goby.priceMax = 8.0
+fish.goby.priceMin = 7.0
+fish.goby.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.goby.sizeMax = 220
+fish.goby.tankVolumeMin = 40
 
-fish.Wrasse.uid = 13
-fish.Wrasse.name = Wrasse
-fish.Wrasse.description = Not available.
-fish.Wrasse.price = 34.9
-fish.Wrasse.priceMax = 36.0
-fish.Wrasse.priceMin = 33.0
-fish.Wrasse.taxonomy = Class: Actinopterygii, Order Perciformes
-fish.Wrasse.sizeMax = 80
-fish.Wrasse.tankVolumeMin = 60
+fish.hogfish.uid = 9
+fish.hogfish.name =  Hogfish
+fish.hogfish.description = Not available.
+fish.hogfish.price = 29.9
+fish.hogfish.priceMax = 32.0
+fish.hogfish.priceMin = 28.0
+fish.hogfish.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.hogfish.sizeMax = 310
+fish.hogfish.tankVolumeMin = 100
+
+fish.seahorse.uid = 10
+fish.seahorse.name =  Seahorse
+fish.seahorse.description = Not available.
+fish.seahorse.price = 12.3
+fish.seahorse.priceMax = 10.0
+fish.seahorse.priceMin = 8.0
+fish.seahorse.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.seahorse.sizeMax = 70
+fish.seahorse.tankVolumeMin = 30
+
+fish.shark.uid = 11
+fish.shark.name =  Shark
+fish.shark.description = Not available.
+fish.shark.price = 12000.0
+fish.shark.priceMax = 4500.0
+fish.shark.priceMin = 1200.0
+fish.shark.taxonomy = Class: Chondrichthyes, Order Carcharhiniformes
+fish.shark.sizeMax = 12000
+fish.shark.tankVolumeMin = 50000
+
+fish.triggerfish.uid = 12
+fish.triggerfish.name =  Triggerfish
+fish.triggerfish.description = Not available.
+fish.triggerfish.price = 15.9
+fish.triggerfish.priceMax = 26.0
+fish.triggerfish.priceMin = 13.0
+fish.triggerfish.taxonomy = Class: Actinopterygii, Order Tetraodontiformes
+fish.triggerfish.sizeMax = 350
+fish.triggerfish.tankVolumeMin = 70
+
+fish.wrasse.uid = 13
+fish.wrasse.name = Wrasse
+fish.wrasse.description = Not available.
+fish.wrasse.price = 34.9
+fish.wrasse.priceMax = 36.0
+fish.wrasse.priceMin = 33.0
+fish.wrasse.taxonomy = Class: Actinopterygii, Order Perciformes
+fish.wrasse.sizeMax = 80
+fish.wrasse.tankVolumeMin = 60
