--- a/src/com/epam/koryagin/aquarium/resources/fishType.properties
+++ b/src/com/epam/koryagin/aquarium/resources/fishType.properties
@@ -1,13 +1,13 @@
-Angelfish = 1
-Basslet = 2
-Boxfish = 3
-TigerBarb = 4
-Cardinalfish = 5
-Clownfish = 6
-Foxface = 7
-Goby = 8
-Hogfish = 9
-Seahorse = 10
-Shark = 11
-Triggerfish = 12
-Wrasse = 13
+angelfish = 1
+basslet = 2
+boxfish = 3
+tigerBarb = 4
+cardinalfish = 5
+clownfish = 6
+foxface = 7
+goby = 8
+hogfish = 9
+seahorse = 10
+shark = 11
+triggerfish = 12
+wrasse = 13
