added DP Builder

--- a/src/com/epam/koryagin/aquarium/resources/accessory.properties
+++ b/src/com/epam/koryagin/aquarium/resources/accessory.properties
@@ -1,56 +1,64 @@
+accessory.type.pump = 1
+accessory.type.filter = 2
+accessory.type.algea = 3
+accessory.type.sand = 4
+accessory.type.pebles = 5
+accessory.type.lamp = 6
+accessory.type.thermometer = 7
+accessory.type.heater = 8
 
-accessory.Pump.uid = 1
-accessory.Pump.name =  Pump
-accessory.Pump.description = 300Gal Aquarium Adjustable Air Pump, 6 Air Stones, 25 feet Tubing
-accessory.Pump.price = 53.98
-accessory.Pump.priceMax = 66.45
-accessory.Pump.priceMin = 49.98
+accessory.pump.uid = 1
+accessory.pump.name =  Pump
+accessory.pump.description = 300Gal Aquarium Adjustable Air Pump, 6 Air Stones, 25 feet Tubing
+accessory.pump.price = 53.98
+accessory.pump.priceMax = 66.45
+accessory.pump.priceMin = 49.98
 
-accessory.Filter.uid = 2
-accessory.Filter.name =  Filter
-accessory.Filter.description = Filter","100 Gallon Aquarium accessory Tank Canister Filter + 9W UV Sterilizer 370 GPH
-accessory.Filter.price = 52.99
-accessory.Filter.priceMax = 66.45
-accessory.Filter.priceMin = 44.99
+accessory.filter.uid = 2
+accessory.filter.name =  Filter
+accessory.filter.description = Filter","100 Gallon Aquarium accessory Tank Canister Filter + 9W UV Sterilizer 370 GPH
+accessory.filter.price = 52.99
+accessory.filter.priceMax = 66.45
+accessory.filter.priceMin = 44.99
 
-accessory.Algae.uid = 3
-accessory.Algae.name =  Algae
-accessory.Algae.description = Fresh water aquarium algae
-accessory.Algae.price = 13.98
-accessory.Algae.priceMax = 15.0
-accessory.Algae.priceMin = 12.0
+accessory.algae.uid = 3
+accessory.algae.name =  Algae
+accessory.algae.description = Fresh water aquarium algae
+accessory.algae.price = 13.98
+accessory.algae.priceMax = 15.0
+accessory.algae.priceMin = 12.0
 
-accessory.Sand.uid = 4
-accessory.Sand.name =  Sand
-accessory.Sand.description = Petco Black Aquarium Sand
-accessory.Sand.price = 12.99
-accessory.Sand.priceMax = 17.99
-accessory.Sand.priceMin = 4.99
+accessory.sand.uid = 4
+accessory.sand.name =  Sand
+accessory.sand.description = Petco Black Aquarium Sand
+accessory.sand.price = 12.99
+accessory.sand.priceMax = 17.99
+accessory.sand.priceMin = 4.99
 
-accessory.Pebles.uid = 5
-accessory.Pebles.name =  Pebles
-accessory.Pebles.description = Sonora River Pebbles10 Pounds Natural Aquarium accessory Terrarium Gravel Decorative
-accessory.Pebles.price = 25.99
-accessory.Pebles.priceMax = 31.90
-accessory.Pebles.priceMin = 5.50
+accessory.pebles.uid = 5
+accessory.pebles.name =  Pebles
+accessory.pebles.description = Sonora River Pebbles10 Pounds Natural Aquarium accessory Terrarium Gravel Decorative
+accessory.pebles.price = 25.99
+accessory.pebles.priceMax = 31.90
+accessory.pebles.priceMin = 5.50
 
-accessory.Lamp.uid = 6
-accessory.Lamp.name =  Lamp
-accessory.Lamp.description = LED 48\" 800 Aquarium Light Fresh water Tropical accessory Single Bright Lunar 120 cm
-accessory.Lamp.price = 85.99
-accessory.Lamp.priceMax = 132.85
-accessory.Lamp.priceMin = 53.95
+accessory.lamp.uid = 6
+accessory.lamp.name =  Lamp
+accessory.lamp.description = LED 48\" 800 Aquarium Light Fresh water Tropical accessory Single Bright Lunar 120 cm
+accessory.lamp.price = 85.99
+accessory.lamp.priceMax = 132.85
+accessory.lamp.priceMin = 53.95
 
-accessory.Thermometer.uid = 7
-accessory.Thermometer.name =  Thermometer
-accessory.Thermometer.description = LCD Digital accessory Aquarium Thermometer Water Terrarium Black FREE Extra Batteries
-accessory.Thermometer.price = 20.9
-accessory.Thermometer.priceMax = 8.85
-accessory.Thermometer.priceMin = 4.27
+accessory.thermometer.uid = 7
+accessory.thermometer.name =  Thermometer
+accessory.thermometer.description = LCD Digital accessory Aquarium Thermometer Water Terrarium Black FREE Extra Batteries
+accessory.thermometer.price = 20.9
+accessory.thermometer.priceMax = 8.85
+accessory.thermometer.priceMin = 4.27
 
-accessory.Heater.uid = 8
-accessory.Heater.name =  Heater
-accessory.Heater.description = 200W  110V Automatic Submersible accessory Tank Aquarium Warmer Heater US Plug
-accessory.Heater.price = 17.99
-accessory.Heater.priceMax = 27.99
-accessory.Heater.priceMin = 7.98
+accessory.heater.uid = 8
+accessory.heater.name =  Heater
+accessory.heater.description = 200W  110V Automatic Submersible accessory Tank Aquarium Warmer Heater US Plug
+accessory.heater.price = 17.99
+accessory.heater.priceMax = 27.99
+accessory.heater.priceMin = 7.98
