--- a/src/com/epam/koryagin/aquarium/resources/accessoryType.properties
+++ b/src/com/epam/koryagin/aquarium/resources/accessoryType.properties
@@ -1,8 +1,8 @@
-Pump = 1
-Filter = 2
-Algea = 3
-Sand = 4
-Pebles = 5
-Lamp = 6
-Thermometer = 7
-Heater = 8
+pump = 1
+filter = 2
+algea = 3
+sand = 4
+pebles = 5
+lamp = 6
+thermometer = 7
+heater = 8
